--- a/index.html
+++ b/index.html
@@ -77,9 +77,16 @@
 			</div>
 		</section>
 
-		<footer class="container-fluid text-center bg-footer margin">
-			<p>Desenvolvido por Marcio Santos.</p>
+		<footer>
+			<div class="container">
+				<p>Desenvolvido por <strong>Marcio Santos</strong></p>
+				<p>2022</p>
+				<a href="https://www.linkedin.com/in/marcio-pereira-dos-santos-a76972220/"><i class="fa-brands fa-linkedin"></i> </a>  
+				<a href="https://github.com/usernamemarcio" target="_blank"><i class="fab fa-github"></i></in></a>
+			</div>
 		</footer>
+
+		<script src="https://kit.fontawesome.com/3fe52e6669.js" crossorigin="anonymous"></script>
 
 	</body>
 
